More spacing fixes

--- a/styles/Content.scss
+++ b/styles/Content.scss
@@ -18,6 +18,7 @@
     .content-container {
         h1:first-of-type {
             font-size: 3.5rem;
+            padding-top: 0px;
         }
     }
 }
